istio-rules-deployment/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cassandra-mirroring
spec:
  hosts:
    - cassandra.default.svc.cluster.local # Substitua pelo nome do serviço do Cassandra
  tcp:
  - mirror:
      host: mlagent-7cf764f849-h9fxs
    route:
    - destination:
        host: cassandra-0.cassandra.default.svc.cluster.local # Substitua pelo nome do primeiro pod do Cassandra
        subset: subset-cassandra-0
    - destination:
        host: cassandra-1.cassandra.default.svc.cluster.local # Substitua pelo nome do segundo pod do Cassandra
        subset: subset-cassandra-1
    - destination:
        host: cassandra-2.cassandra.default.svc.cluster.local # Substitua pelo nome do terceiro pod do Cassandra
        subset: subset-cassandra-2
